<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/lineTop"
        android:layout_width="411dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgbtnEmer"
                android:layout_width="112dp"
                android:layout_height="126dp"
                android:background="@null"
                android:src="@drawable/iconmidi" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ambulance"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="17dp">

            <ImageButton
                android:id="@+id/imgbtnFire"
                android:layout_width="112dp"
                android:layout_height="126dp"
                android:background="@null"
                android:src="@drawable/iconfire" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fire_fight"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="17dp">

            <ImageButton
                android:id="@+id/imgbtnSecur"
                android:layout_width="112dp"
                android:layout_height="126dp"
                android:background="@null"
                android:src="@drawable/icon"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/security"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineTop"
        app:layout_constraintVertical_bias="0.16"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="268dp">

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="112dp"
                    android:layout_height="126dp"
                    android:background="@null"
                    android:src="@drawable/first_aid_kit" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repAmbulance" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="112dp"
                    android:layout_height="126dp"
                    android:background="@null"
                    android:src="@drawable/fire_extinguisher" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repFire_fight" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="112dp"
                    android:layout_height="126dp"
                    android:background="@null"
                    android:src="@drawable/ic_police_cap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repSecurity" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="112dp"
                    android:layout_height="126dp"
                    android:background="@null"
                    android:src="@drawable/ic_car_suport" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repTrouble" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="112dp"
                    android:layout_height="126dp"
                    android:background="@null"
                    android:src="@drawable/ic_tips" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Tips" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="112dp"
                    android:layout_height="126dp"
                    android:background="@null"
                    android:src="@drawable/camera" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Camera" />
            </LinearLayout>

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>